# fastapi-template

./: .env.dev.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/core/: config.py
app/db/: __init__.py  dependencies.py  manager.py
app/models/: __init__.py  base.py  base_model.py
app/models/mixins/: __init__.py  id_int_pk.py
app/repositories/: base.py  example_repo.py  example_repository.py
